# mcp-server

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTHENTICATION.md  AUTHENTICATION_FLOW.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  build.rs  clippy.toml  goldentooth-mcp.service  mcp-server-env.template  rustfmt.toml  test_mcp_auth.sh
.github/actions/setup-goldentooth-agent/: action.yml
.github/actions/setup-rust-with-cache/: action.yml
.github/workflows/: bump-version.yml  ci.yml  release.yml  version-bump.yml
examples/: auth_example.md  check_all_versions.rs  check_protocol_versions.rs  grafana_screenshot.rs  test_auth.rs  test_custom_version.rs  test_fixed_protocol_version.rs  test_initialize_response.rs  test_protocol_override.rs  test_screenshot.rs
src/: CLAUDE.md  auth.rs  cluster.rs  command.rs  error.rs  http_auth.rs  http_server.rs  lib.rs  main.rs  protocol.rs  screenshot.rs  service.rs  validation.rs  vectors.rs
src/auth/: CLAUDE.md  bearer.rs  jwt.rs  mod.rs
src/cluster/: mod.rs
src/error/: mod.rs
src/logging/: mod.rs
src/mcp/: mod.rs
src/tools/: CLAUDE.md  mod.rs
src/transport/: CLAUDE.md  http.rs  mod.rs  stdio.rs
src/types/: command_safety.rs  error_codes.rs  io_streams.rs  log_level.rs  mcp_message.rs  mod.rs  protocol_state.rs  tool_args.rs  type_safe_errors.rs
tests/: CLAUDE.md  agent_integration_test.rs  argument_handlers.rs  authentication_security.rs  certificate_security_test.rs  cluster_tools_integration.rs  compile_time_safety.rs  complete_auth_flow_test.rs  dos_protection_test.rs  end_to_end_oauth_test.rs  error_handling.rs  error_handling_dry_demo.rs  error_handling_patterns.rs  error_resilience.rs  http_integration.rs  http_transport.rs  http_transport_test.rs  input_validation.rs  integration_test.rs  jwt_validation_test.rs  logging_validation.rs  main_functions.rs  method_mapping_refactor.rs  method_string_mapping.rs  new_tools_integration_test.rs  oauth_integration_test.rs  protocol_compliance.rs  protocol_compliance_refactored.rs  protocol_edge_cases.rs  real_token_test.rs  response_builder_refactor.rs  secret_disclosure_test.rs  sse_stream_management.rs  subprocess_execution.rs  token_introspection_test.rs  tool_schema_refactor.rs  transport_parity.rs  type_safe_tool_execution.rs  types_comprehensive.rs  validation_comprehensive.rs
tests/auth/: CLAUDE.md  authentication_security.rs
tests/common/: mod.rs  test_helpers.rs
tests/tools/: cluster_tools_integration.rs  tool_execution.rs
tests/transport/: CLAUDE.md  http_integration.rs  http_transport.rs  sse_stream_management.rs  transport_parity.rs
