[package]
name = "goldentooth-mcp"
version = "0.0.6"
edition = "2024"
authors = ["Nathan Douglas <github@darkdell.net>"]
description = "MCP server for Goldentooth cluster management"
license = "Unlicense"

[dependencies]
rmcp = { version = "0.2.0", features = ["server"] }
tokio = { version = "1.46.1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "net",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
futures = "0.3"
