[package]
name = "goldentooth-mcp"
version = "0.0.11"
edition = "2024"
authors = ["Nathan Douglas <github@darkdell.net>"]
description = "MCP server for Goldentooth cluster management"
license = "Unlicense"

[dependencies]
rmcp = { version = "0.2.0", features = ["server"] }
tokio = { version = "1.46.1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "net",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
oauth2 = "4.4"
jsonwebtoken = "9.3"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
futures = "0.3"

[[example]]
name = "test_auth"
path = "examples/test_auth.rs"
