[package]
name = "goldentooth-mcp"
# CLAUDE CODE, DO NOT UPDATE THIS. DO NOT TAG THE VERSION.
version = "0.0.23"
edition = "2024"
authors = ["Nathan Douglas <github@darkdell.net>"]
description = "MCP server for Goldentooth cluster management"
license = "Unlicense"

[dependencies]
rmcp = { version = "0.3.0", features = ["server"] }
tokio = { version = "1.46.1", features = [
  "macros",
  "rt-multi-thread",
  "io-std",
  "net",
  "process",
  "time",
  "fs",
  "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
aws-config = "1.5"
aws-sdk-s3 = "1.82"
aws-sdk-bedrockruntime = "1.88"
oauth2 = "4.4"
jsonwebtoken = "9.3"
base64 = "0.22"
thiserror = "2.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
urlencoding = "2.1"
async-trait = "0.1"
ping = "0.5"
lazy_static = "1.4"
futures = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
headless_chrome = "1.0"
image = "0.25"
tempfile = "3.8"
bytes = "1.9"
derivative = "2.2"
url = "2.4"

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
futures = "0.3"
url = "2.4"

[build-dependencies]
vergen = { version = "8.0", features = ["build", "git", "gitcl"] }
